# miniorg

./: .dev.vars.example  .gitignore  ARCHITECTURE.md  BASE_D1_PRETE.md  BUILD_FIXED.md  CHANGELOG.md  CLOUDFLARE_FIX.md  CORRECTIONS.md  D1_RESET_SUCCESS.md  D2_RAW_FIX.md  DEPLOYMENT.md  DEPLOY_NOW.md  DEPLOY_WORKERS_JWT.md  FIX_FS_READDIR.md  GUIDE_RAPIDE_D1.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_LIBSQL_TO_D1.md  NEXTAUTH_READY.md  NEXT_STEPS_TAURI.md  OPENNEXT_STATUS.md  PLATFORM_STYLES_README.md  QUICK_REFERENCE.md  README.md  README_D1_LOCAL.md  TAURI_IMPLEMENTATION_COMPLETE.md  TAURI_SETUP.md  dev.db  env.example  middleware.ts  next.config.js  open-next.config.ts  package-lock.json  package.json  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
docs/: ARCHITECTURE.md  CLOUDFLARE_DASHBOARD_SETUP.md  DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOCAL_DEVELOPMENT.md  PAGES_VS_WORKERS.md  PLATFORM_STYLES.md  POST_DEPLOYMENT_TESTS.md  QUICK_START.md  README.md  TAURI_INTEGRATION.md  TOAST_COMPLETION_FEATURE.md  TROUBLESHOOTING.md
lib/: api-client.ts  auth-better.ts  auth-client.ts  auth-credentials.ts  auth-edge.ts  auth-tauri-server.ts  auth-tauri.ts  auth.ts  calendar-sync-tauri.ts  calendar-utils.ts  email.ts  notifications-tauri.ts  platform.ts  prisma-dev.ts  prisma-edge.ts  prisma.ts  task-events.ts  task-utils.ts  (+1 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .env.tauri.example  icon.icns
src-tauri/src/: auth.rs  calendar_sync.rs  main.rs  notifications.rs
(+259 files in other folders)
